--- a/index.html
+++ b/index.html
@@ -21,32 +21,68 @@
       <div class="container">
         <div class="nav-menu-logo">
           <a class="logo" href="/"><span class="logo-span">WEB</span>STUDIO</a>
-          <nav class="nav">
-            <ul class="nav-menu">
+        </div>
+        <div class="menu-icon-wrapper">
+          <svg class="menu-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-menu"></use>
+          </svg>
+        </div>
+        <div class="mobil-menu">
+          <div class="menu-content">
+            <button type="button" class="exit-container" name="modal-item">
+              <svg class="exit-icon" width="8" height="8">
+                <use href="./images/icons.svg#icon-exit"></use>
+              </svg>
+            </button>
+            <nav class="nav">
+              <ul class="nav-menu">
+                <li class="list">
+                  <a class="nav-menu-link" href="#about">Studio</a>
+                </li>
+                <li class="list">
+                  <a class="nav-menu-link" href="#portfolio">Portfolio</a>
+                </li>
+                <li class="list">
+                  <a class="nav-menu-link" href="#footer">Contacts</a>
+                </li>
+              </ul>
+            </nav>
+            <ul class="contact">
               <li class="list">
-                <a class="nav-menu-link" href="#about">Studio</a>
+                <a class="contact-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
               </li>
               <li class="list">
-                <a class="nav-menu-link" href="#portfolio">Portfolio</a>
-              </li>
-              <li class="list">
-                <a class="nav-menu-link" href="#footer">Contacts</a>
+                <a class="contact-link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
               </li>
             </ul>
-          </nav>
+            <ul class="team-icon-container">
+              <li class="team-icon-wrapper">
+                <svg class="team-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </li>
+              <li class="team-icon-wrapper">
+                <svg class="team-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </li>
+              <li class="team-icon-wrapper">
+                <svg class="team-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </li>
+              <li class="team-icon-wrapper">
+                <svg class="team-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
         </div>
-        <ul class="contact">
-          <li class="list">
-            <a class="contact-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="list">
-            <a class="contact-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
       </div>
     </header>
     <main>
@@ -127,8 +163,8 @@
                 width="264"
               />
               <div class="team-text">
-                <h3 class="list-title">Mark Guerrero</h3>
-                <p class="list-text">Product Designer</p>
+                <h3 class="team-title">Mark Guerrero</h3>
+                <p class="team-p-text">Product Designer</p>
                 <ul class="team-icon-container">
                   <li class="team-icon-wrapper">
                     <svg class="team-icon" width="16" height="16">
@@ -161,8 +197,8 @@
                 width="264"
               />
               <div class="team-text">
-                <h3 class="list-title">Tom Ford</h3>
-                <p class="list-text">Frontend Developer</p>
+                <h3 class="team-title">Tom Ford</h3>
+                <p class="team-p-text">Frontend Developer</p>
                 <ul class="team-icon-container">
                   <li class="team-icon-wrapper">
                     <svg class="team-icon" width="16" height="16">
@@ -195,8 +231,8 @@
                 width="264"
               />
               <div class="team-text">
-                <h3 class="list-title">Camila Garcia</h3>
-                <p class="list-text">Marketing</p>
+                <h3 class="team-title">Camila Garcia</h3>
+                <p class="team-p-text">Marketing</p>
                 <ul class="team-icon-container">
                   <li class="team-icon-wrapper">
                     <svg class="team-icon" width="16" height="16">
@@ -229,8 +265,8 @@
                 width="264"
               />
               <div class="team-text">
-                <h3 class="list-title">Daniel Wilson</h3>
-                <p class="list-text">UI Designer</p>
+                <h3 class="team-title">Daniel Wilson</h3>
+                <p class="team-p-text">UI Designer</p>
                 <ul class="team-icon-container">
                   <li class="team-icon-wrapper">
                     <svg class="team-icon" width="16" height="16">
@@ -277,8 +313,8 @@
                 />
               </div>
               <div class="portfolio-text">
-                <h3 class="list-title">Banking App</h3>
-                <p class="list-text">App</p>
+                <h3 class="portfolio-title">Banking App</h3>
+                <p class="portfolio-list-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
@@ -295,8 +331,8 @@
                 />
               </div>
               <div class="portfolio-text">
-                <h3 class="list-title">Cashless Payment</h3>
-                <p class="list-text">Marketing</p>
+                <h3 class="portfolio-title">Cashless Payment</h3>
+                <p class="portfolio-list-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
@@ -313,8 +349,8 @@
                 />
               </div>
               <div class="portfolio-text">
-                <h3 class="list-title">Meditation App</h3>
-                <p class="list-text">App</p>
+                <h3 class="portfolio-title">Meditation App</h3>
+                <p class="portfolio-list-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
@@ -331,8 +367,8 @@
                 />
               </div>
               <div class="portfolio-text">
-                <h3 class="list-title">Taxi Service</h3>
-                <p class="list-text">Marketing</p>
+                <h3 class="portfolio-title">Taxi Service</h3>
+                <p class="portfolio-list-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
@@ -349,8 +385,8 @@
                 />
               </div>
               <div class="portfolio-text">
-                <h3 class="list-title">Screen Illustrations</h3>
-                <p class="list-text">Design</p>
+                <h3 class="portfolio-title">Screen Illustrations</h3>
+                <p class="portfolio-list-text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
@@ -367,8 +403,8 @@
                 />
               </div>
               <div class="portfolio-text">
-                <h3 class="list-title">Online Courses</h3>
-                <p class="list-text">Marketing</p>
+                <h3 class="portfolio-title">Online Courses</h3>
+                <p class="portfolio-list-text">Marketing</p>
               </div>
             </li>
           </ul>
@@ -432,7 +468,7 @@
         </div>
       </div>
     </footer>
-    <div class="modal is-open">
+    <div class="modal">
       <div class="modal-content">
         <form action="" class="modal-form">
           <button type="button" class="exit-container" name="modal-item">
